Changed profile image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section class="about-me">
             <h3 class="section-title">aboutMe</h3>
-            <img src="./img/profile.jpg" alt="profile" class="profile-image">
+            <img src="./img/profile_larger.jpg" alt="profile" class="profile-image">
         </section>
 
         <section class="workplace">
